--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  mocker:
+  srv:
     build: .
     image: 'mocker'
     command: python manage.py runserver 0.0.0.0:8080
