refactoring: move tests create mock to separate module

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE=project.settings
-python_files = tests.py test_*.py
+python_files = tests_*.py
 addopts = --nomigrations
