--- a/code/pytest.ini
+++ b/code/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE=project.settings
 python_files = tests_*.py
-addopts = --nomigrations
+addopts = --nomigrations -p no:cacheprovider
