--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - '.env'
     volumes:
-      - '.:/code'
+      - './code:/code'
     ports:
       - '8080:8080'
     depends_on:
