--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker-compose build
+  - docker-compose -f docker-compose.yml -f docker-compose.ci.yml build
 
 before_script:
   - sudo service postgresql stop
