--- a/code/pytest.ini
+++ b/code/pytest.ini
@@ -1,4 +1,16 @@
 [pytest]
 DJANGO_SETTINGS_MODULE=project.settings
 python_files = tests_*.py
-addopts = --nomigrations -p no:cacheprovider
+addopts = --nomigrations
+          -p no:cacheprovider
+          --cov=.
+          --cov-config=pytest.ini
+
+[run]
+omit = */tests/*
+       */apps.py
+       */migrations/*
+       *project/*
+       *urls.py
+       */__init__.py
+       manage.py
